// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _accessKey="V" 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _accesskey="V" _currentlength="17" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        Label
        <span aria-hidden="true" class="badge-text-hint">
          V
        </span>
      </span>
      <div slot="input">
        <input accesskey="V" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _alert=true 1`] = `
<kol-input-email _alert="" class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _alert="" _currentlength="17" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _disabled=true 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="17" _disabled="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" disabled="" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _hint="Hint" 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="17" _hint="Hint" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input aria-describedby="id-nonce-hint" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="17" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="17" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="17" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-input-email _hide-error="" class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="17" _hideerror="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="17" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _readOnly=true 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="17" _hint="" _id="id-nonce" _label="Label" _readonly="" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" readonly="" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _shortKey="S" 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="17" _hint="" _id="id-nonce" _label="Label" _shortkey="S" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        Label
        <span aria-hidden="true" class="badge-text-hint">
          S
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _smartButton={"_icons":["codicon codicon-eye"],"_hideLabel":true,"_label":"einblenden"} 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="17" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _accessKey="V" 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _accesskey="V" _currentlength="17" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        Label
        <span aria-hidden="true" class="badge-text-hint">
          V
        </span>
      </span>
      <div slot="input">
        <input accesskey="V" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _alert=true 1`] = `
<kol-input-email _alert="" class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _alert="" _currentlength="17" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _disabled=true 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="17" _disabled="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" disabled="" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _hint="Hint" 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="17" _hint="Hint" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input aria-describedby="id-nonce-hint" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="17" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="17" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="17" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-input-email _hide-error="" class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="17" _hideerror="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="17" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _readOnly=true 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="17" _hint="" _id="id-nonce" _label="Label" _readonly="" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" readonly="" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _shortKey="S" 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="17" _hint="" _id="id-nonce" _label="Label" _shortkey="S" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        Label
        <span aria-hidden="true" class="badge-text-hint">
          S
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _smartButton={"_icons":["codicon codicon-eye"],"_hideLabel":true,"_label":"einblenden"} 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="17" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _touched=true 1`] = `
<kol-input-email _touched="" class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _alert="" _currentlength="17" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" _touched="" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="17" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _touched=true 1`] = `
<kol-input-email _touched="" class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _alert="" _currentlength="17" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" _touched="" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="17" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;
